# libshadertoy

./: .atom-build.yaml  .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.build  Dockerfile.debian  Dockerfile.stretch  Dockerfile.ubuntu  LICENSE  Makefile  README.md  build.bat  build.sh  buildpackage.sh  buildpackages.sh  configure.sh  entrypoint.sh  index.html  libshadertoy.sublime-project  prebuild.bat  shadertoy-config-version.cmake.in  shadertoy-config.cmake  shadertoy-config.cmake.in  test.sh
docs/: CMakeLists.txt  Doxyfile.in  EXAMPLES.md  INSTALL.md  TESTING.md  introduction.dox
examples/: CMakeLists.txt  DesktopExamples.cmake  WebExamples.cmake  api.cpp  api.hpp  test.cpp  test.hpp  test_config.hpp.in
examples/00-build/: CMakeLists.txt  README.md  main.cpp
examples/10-gradient/: CMakeLists.txt  README.md  main.cpp  shader.glsl
examples/15-uniforms/: CMakeLists.txt  main.cpp  uniforms.cpp  uniforms.hpp
examples/50-shadertoy/: CMakeLists.txt  README.md  main.cpp
examples/60-xscreensaver/: CMakeLists.txt  main.c
examples/compute/: CMakeLists.txt  README.md  main.cpp
examples/geometry/: .gitignore  CMakeLists.txt  README.md  main.cpp  vertex.glsl
examples/gradient/: CMakeLists.txt  README.md  main.cpp
examples/image/: CMakeLists.txt  README.md  image-store.glsl  main.cpp  vase_rect.exr
examples/include/: api.hpp  test.hpp
examples/include/20-geometry/: .gitignore  uniforms.hpp
examples/include/60-xscreensaver/: demo.h
examples/shaders/: 20_vertex.glsl  shader-compute-out.glsl  shader-compute.glsl  shader-gradient-uniform.glsl  shader-gradient.glsl  shader-image.glsl
examples/shadertoy/: CMakeLists.txt  README.md  main.cpp
examples/src/: api.cpp  test.cpp
examples/src/00-build/: CMakeLists.txt  README.md  main.cpp
examples/src/10-gradient/: CMakeLists.txt  README.md  main.cpp
examples/src/11-image/: CMakeLists.txt  README.md  main.cpp
examples/src/15-uniforms/: CMakeLists.txt  README.md  main.cpp
examples/src/20-geometry/: .gitignore  CMakeLists.txt  README.md  main.cpp  uniforms.cpp
examples/src/30-compute/: CMakeLists.txt  README.md  main.cpp
examples/src/50-shadertoy/: CMakeLists.txt  README.md  main.cpp
examples/src/60-xscreensaver/: CMakeLists.txt  README.md  demo.cpp  main.c
examples/uniforms/: CMakeLists.txt  README.md  gradient-uniform.glsl  main.cpp
examples/web-gradient/: CMakeLists.txt  index.html  main.cpp
examples/xscreensaver/: CMakeLists.txt  README.md  demo.cpp
src/: BufferConfig.cpp  CMakeLists.txt  ContextConfig.cpp  Misc.cpp  RenderContext.cpp  ShaderCompiler.cpp  ShadertoyError.cpp  TextureEngine.cpp  ToyBuffer.cpp  UniformState.cpp  buffer_base.cpp  buffer_config.cpp  context_config.cpp  draw_state.cpp  io_resource.cpp  output_name.cpp  program_host.cpp  program_input.cpp  program_interface.cpp  render_context.cpp  shader_compiler.cpp  shadertoy_error.cpp  size.cpp  swap_chain.cpp  texture_engine.cpp  toy_buffer.cpp  uniform_state.cpp
src/OpenGL/: Buffer.cpp  Caller.cpp  Framebuffer.cpp  Program.cpp  Query.cpp  Renderbuffer.cpp  Shader.cpp  Texture.cpp
src/backends/: CMakeLists.txt
src/backends/gl4/: CMakeLists.txt
src/backends/gl4/src/: backend.cpp  buffer.cpp  caller.cpp  draw_state.cpp  framebuffer.cpp  opengl_error.cpp  program.cpp  query.cpp  renderbuffer.cpp  sampler.cpp  shader.cpp  texture.cpp  vertex_array.cpp
src/backends/gx/: CMakeLists.txt
src/backends/gx/src/: backend.cpp  buffer.cpp  draw_state.cpp  framebuffer.cpp  opengl_error.cpp  program.cpp  query.cpp  renderbuffer.cpp  resource.cpp  sampler.cpp  shader.cpp  texture.cpp  vertex_array.cpp
src/backends/webgl/: CMakeLists.txt
src/backends/webgl/src/: backend.cpp  buffer.cpp  caller.cpp  draw_state.cpp  framebuffer.cpp  program.cpp  query.cpp  renderbuffer.cpp  sampler.cpp  shader.cpp  texture.cpp  vertex_array.cpp
src/base/: CMakeLists.txt
src/base/include/shadertoy/: config.hpp.in  shadertoy_error.hpp
src/base/src/: shadertoy_error.cpp
src/base/src/utils/: log.cpp
src/buffers/: basic_buffer.cpp  buffer_output.cpp  compute_buffer.cpp  geometry_buffer.cpp  gl_buffer.cpp  graphics_buffer.cpp  program_buffer.cpp  toy_buffer.cpp
src/compiler/: basic_part.cpp  define_part.cpp  file_part.cpp  input_part.cpp  program_template.cpp  read_contents.cpp  shader_template.cpp  template_error.cpp  template_part.cpp
src/core/: CMakeLists.txt
src/core/include/: shadertoy.hpp
src/core/include/shadertoy/: buffers.hpp  compiler.hpp  extensions.hpp.in  geometry.hpp  inputs.hpp  io_resource.hpp  member_swap_policy.hpp  members.hpp  output_name.hpp  pre.hpp  program_host.hpp  program_input.hpp  program_interface.hpp  render_context.hpp  shader_compiler.hpp  size.hpp  sources.hpp  swap_chain.hpp  utils.hpp
src/core/shaders/: screen_quad.frag.es3.glsl  screen_quad.vert.es3.glsl  shadertoy.comp.es3.glsl  shadertoy.frag.es3.glsl  shadertoy.frag.glsl
src/core/src/: io_resource.cpp  output_name.cpp  program_host.cpp  program_input.cpp  program_interface.cpp  render_context.cpp  shader_compiler.cpp  size.cpp  swap_chain.cpp
src/core/src/buffers/: basic_buffer.cpp  buffer_output.cpp  compute_buffer.cpp  geometry_buffer.cpp  gl_buffer.cpp  graphics_buffer.cpp  program_buffer.cpp  toy_buffer.cpp
src/core/src/compiler/: basic_part.cpp  define_part.cpp  file_part.cpp  (+7 more)
src/geometry/: basic_geometry.cpp  screen_quad.cpp
src/gl/: buffer.cpp  caller.cpp  framebuffer.cpp  opengl_error.cpp  program.cpp  query.cpp  renderbuffer.cpp  sampler.cpp  shader.cpp  texture.cpp  vertex_array.cpp  wrapper_context.cpp
src/inputs/: basic_input.cpp  buffer_input.cpp  checker_input.cpp  error_input.cpp  exr_input.cpp  file_input.cpp  image_input.cpp  jpeg_input.cpp  noise_input.cpp  openimageio_input.cpp  openimageio_wrapper.cpp  soil_input.cpp  texture_input.cpp
src/members/: basic_member.cpp  buffer_member.cpp  compute_member.cpp  screen_member.cpp
src/utils/: dump_program.cpp  input_factories.cpp  input_factory.cpp  input_loader.cpp  log.cpp
(+1092 files in other folders)
